--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ of those sections to manage the look and feel of the site. */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /*padding-top: 150px;*/
+  padding-top: 100px;
   text-align: center;
   background: #fff;
 }
