--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ of those sections to manage the look and feel of the site. */
 
 /* Limit image width to avoid overflow the container */
 img {
-  max-width: 100%;
+  /*max-width: 100%;*/
   max-height: 100%;
    /*This rule is very important, please do not ignore this! */
 }
